Add a test for computer players